# NeuralAmpModelerCore

./: CMakeLists.txt
